--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, t ".heading") %>
+<% provide(:title, t(".heading")) %>
 <h1><%= t ".heading" %></h1>
 <div class="row">
-  <div class="col-md-7 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render "shared/error_messages" %>
       <%= f.label :name, t(".form.name") %>
