--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -184,3 +184,34 @@ input {
   margin-left: 0;
   width: auto;
 }
+#form-search input {
+  display: inline-block;
+  width: auto;
+}
+
+/* soccer_fields */
+.soccer_fields {
+  list-style: none;
+  padding: 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid $white;
+  }
+
+  .name {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+
+  .content {
+    display: block;
+    margin-left: 60px;
+  }
+
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+}
