Show soccer fields list

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
         <li><%= link_to t(".home"), root_path %></li>
         <li><%= link_to t(".help"), help_path %></li>
         <li><%= link_to t(".login"), "#" %></li>
+        <li><%= link_to t(".soccer_fields"), soccer_fields_path %></li>
       </ul>
     </nav>
   </div>
