--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, t(".heading")) %>
-<h1><%= t(".heading")%></h1>
+<% provide(:title, t ".heading") %>
+<h1><%= t ".heading" %></h1>
 <div class="row">
   <div class="col-md-7 col-md-offset-3">
     <%= form_for(@user) do |f| %>
