--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -10,12 +10,27 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
-    <div class="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
-      <%= yield %>
+    <div id="throbber" style="display:none; min-height:120px;"></div>
+    <div id="noty-holder"></div>
+    <div id="wrapper">
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <%= render "admin/layouts/header" %>
+          <%= render "admin/layouts/sidebar" %>
+      </nav>
+
+      <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row" id="main" >
+                <div class="col-sm-12 col-md-12 well" id="content">
+                    <% flash.each do |message_type, message| %>
+                      <div class="alert alert-<%= message_type %>"><%= message %></div>
+                    <% end %>
+                  <%= yield %>
+                </div>
+            </div>
+            <%= render "admin/layouts/footer" %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
