--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,8 +1,7 @@
-<h1><%= t(".") %></h1>
+<h1><%= t("Soccer Field Manager") %></h1>
 <p><%= t(".hi") %> <%= @user.name %>,</p>
 
 <p>
 <%= t(".welcome_to") %>
 </p>
-
 <%= link_to t(".activate"), edit_account_activation_url(id: @user.activation_token, email: @user.email) %>
