--- a/app/assets/stylesheets/admin/custom_admin.scss
+++ b/app/assets/stylesheets/admin/custom_admin.scss
@@ -302,3 +302,13 @@ input {
 .navbar-brand {
   padding: 5px 15px;
 }
+
+/* field detail */
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.d-block {
+  display: block;
+}
