--- a/app/views/admin/layouts/_header.html.erb
+++ b/app/views/admin/layouts/_header.html.erb
@@ -8,7 +8,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to t(".home"), admin_root_path %></li>
       <li><%= link_to t(".help"), admin_help_path %></li>
-      <li><%= link_to t(".soccer_fields"), soccer_fields_path %></li>
+      <li><%= link_to t(".soccer_fields"), admin_soccer_fields_path %></li>
       <li><%= link_to t(".login"), "#" %></li>
     </ul>
   </nav>
