List of soccer field orders

--- a/app/views/admin/layouts/_sidebar.html.erb
+++ b/app/views/admin/layouts/_sidebar.html.erb
@@ -6,7 +6,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to "#" do %>
+        <%= link_to admin_soccer_field_orders_path do %>
           <i class="fa fa-fw fa-paper-plane-o"></i> <%= t(".manage_orders") %>
         <% end %>
       </li>
